[css-align] The 'left' and 'right' values must be invalid in block axis

The CSS WG resolved to remove the 'left' and 'right' values from the
block/cross axis alignment properties.

https://github.com/w3c/csswg-drafts/issues/1403

This CL changes the CSS parsing logic of all the CSS Box Alignment
properties, both block-axis (align-{self, items, content} and
inline-axis (justify-{self, items, content}).

Additionally, the alignment shorthands (place-{self, items, content})
have been also changed to respect the new syntax.

This change also affects the Grid Layout alignment logic.

Bug: 802095
Change-Id: Id848ce22a9b2d69ecf2bfd58503f590e4b2fe4db
Reviewed-on: https://chromium-review.googlesource.com/877519
Reviewed-by: meade_(do not use) <meade@chromium.org>
Commit-Queue: Javier Fernandez <jfernandez@igalia.com>
Cr-Commit-Position: refs/heads/master@{#531074}
Former-commit-id: 841ce846af10f5855f09fa7db77dd53e680080bf